hw-1 fixed link

--- a/site/html/index.html
+++ b/site/html/index.html
@@ -628,7 +628,7 @@
 <li>Download the index.html and style.css file website</li>
 <li>flow comments to use postions where assign to Achive Result shown to you in the video</li>
 </ol>
-<h3 id="download-from-here-first-assignment">DOWNLOAD FROM HERE <a href="https://t4gamer.github.io/site/assignment/hw-1/index.html"><img alt="🔗" class="twemoji" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@15.1.0/assets/svg/1f517.svg" title=":link:" /> First Assignment</a> <img alt="😄" class="twemoji" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@15.1.0/assets/svg/1f604.svg" title=":smile:" /></h3>
+<h3 id="download-from-here-first-assignment">DOWNLOAD FROM HERE <a href="../assignments/hw-1/"><img alt="🔗" class="twemoji" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@15.1.0/assets/svg/1f517.svg" title=":link:" /> First Assignment</a> <img alt="😄" class="twemoji" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@15.1.0/assets/svg/1f604.svg" title=":smile:" /></h3>
 
 
 
