fixed hw-1 instructions

--- a/site/html/index.html
+++ b/site/html/index.html
@@ -625,8 +625,8 @@
 <h2 id="assignment">Assignment</h2>
 <h3 id="instruction">Instruction</h3>
 <ol>
-<li>Download the index.html and style.css file website</li>
-<li>flow comments to use postions where assign to Achive Result shown to you in the video</li>
+<li>Download the index.html and style.css files from the website source</li>
+<li>follow comments to use postion property with the help of the comments in the html file to Achive Result shown to you via video i am gonna send</li>
 </ol>
 <h3 id="download-from-here-first-assignment">DOWNLOAD FROM HERE <a href="../assignments/hw-1/"><img alt="🔗" class="twemoji" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@15.1.0/assets/svg/1f517.svg" title=":link:" /> First Assignment</a> <img alt="😄" class="twemoji" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@15.1.0/assets/svg/1f604.svg" title=":smile:" /></h3>
 
